test/library/packages/UnitTest/AssertTrue/AssertTrueTest.good
Error Caught in x == false
AssertionError: in AssertTrueTest.chpl:7 - assertTrue failed. Given expression is False
================================================================================
Error Caught in expresion '1==2'
AssertionError: in AssertTrueTest.chpl:7 - assertTrue failed. Given expression is False
================================================================================
